tests/baselines/reference/parseCommaSeparatedNewlineNumber.errors.txt
parseCommaSeparatedNewlineNumber.ts(1,2): error TS2304: Cannot find name 'a'.
parseCommaSeparatedNewlineNumber.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== parseCommaSeparatedNewlineNumber.ts (2 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    1)